# Engenharia_de_Dados

./: .gitignore  README.md
API/: .flake8  .gitignore  .pre-commit-config.yaml  apis.py  day_summary.json  ingestors.py  main.py  mercadobitcoin.py  orientacao_a_objeto.py  pyproject.toml  trades.json  writes.py
API/testes/: test_apis.py  test_ingestors.py
AWS/: aws.py  pyproject.toml
ETL/: .gitignore
ETL/src/: etl.py  etl_spark.py
Ingestao_de_Dados/: main.py
Projeto/: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
Projeto/dags/: dag_funds.py  ingestors.py
Projeto/dags/fii_dag/: collect_fii.py
Projeto/dags/selenium_dag/: ingestors.py
Projeto/data_collect/: ingestors.py  main.py
Projeto_How_Bootcamp/: pyproject.toml
Projeto_How_Bootcamp/coleta_dados/: ingestors.py  main.py
crawlers/: README.md  funds.csv  main.py  pyproject.toml
jenkins/: docker-compose.yml  dockerfile  pyproject.toml
jenkins/cambio/: main.py
modulo_sql/: .env
pyspark/: .gitignore  README.md
pyspark/src/: functions.py  requirements.txt
pyspark_mongodb/: .gitignore  README.md  docker-compose.yml  pyproject.toml
pyspark_mongodb/src/: read_data.py
pyspark_postgresql/: .gitignore  README.md  docker-compose.yml  pyproject.toml
pyspark_postgresql/src/: 1.CreateTable.sql  2.InsertClientes.sql  3.InsertIntoProdutos.sql  4.InsertIntoVendedores.sql  5.InsertIntoVendas.sql  6.InsertItensVenda.sql  read_data.py
