[tool.poetry]
name = "crawlers"
version = "0.1.0"
description = "Capturando dados com crawlers"
authors = ["karinnecristina <karinnecristinapereira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
