[tool.poetry]
name = "Jenkins"
version = "0.1.0"
description = "Automatizando testes"
authors = ["karinnecristina <karinnecristinapereira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
