[tool.poetry]
name = "postgres_pyspark"
version = "0.1.0"
description = ""
authors = ["karinnecristina <karinnecristinapereira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
